5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1807_2563.log
== TEST (2019-06-06 16:59:11) 
-- CODE:
from numpy import *
vet = array(eval(input("Digite as medias: ")))
i = 0
ix = 0
for i in range(size(vet)):
	if (5 <= i < 7):
		ix = ix + 1
		i = i + 1
	else:
		ix = 0
print(ix)
vet = array(eval(input("Digite as medias: ")))
	
	
		
		
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:02:15) 
-- CODE:
from numpy import *
vet = array(eval(input("Digite as medias: ")))
i = 0
ix = 0
for i in range(size(vet)):
	while (size(vet) > 0):	
		if (5 <= i < 7):
			ix = ix + 1
			i = i + 1
		else:
			ix = 0
print(ix)
vet = array(eval(input("Digite as medias: ")))
	
	
		
		
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:02:47) 
-- CODE:
from numpy import *
vet = array(eval(input("Digite as medias: ")))
i = 0
ix = 0
for i in range(size(vet)):
	while (size(vet) > 0):	
		if (5 <= i < 7):
			ix = ix + 1
			i = i + 1
		else:
			ix = 0
	print(ix)
vet = array(eval(input("Digite as medias: ")))
	
	
		
		
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:05:45) 
-- CODE:
from numpy import *
vet = array(eval(input("Digite as medias: ")))
i = 0
ix = 0
for i in range(size(vet)):
	while (vet[i] > 0):
		if (5 <= i < 7):
			ix = ix + 1
			i = i + 1
		else:
			ix = 0
	print(ix)
vet = array(eval(input("Digite as medias: ")))
	
	
		
		
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:06:07) 
-- CODE:
from numpy import *
vet = array(eval(input("Digite as medias: ")))
i = 0
ix = 0
for i in range(size(vet)):
	while (vet[i] > 0):
		if (5 <= i < 7):
			ix = ix + 1
			i = i + 1
		else:
			ix = 0
print(ix)
vet = array(eval(input("Digite as medias: ")))
	
	
		
		
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:29:37) 
-- CODE:
from numpy import *
vet = array(eval(input("Digite as medias: ")))
i = 0
ix = 0
while (size(vet) > 1):
	for i in range(size(vet)):
		if (5 <= i < 7):
			ix = ix + 1
			i = i + 1
		else:
			ix = 0
print(ix)
vet = array(eval(input("Digite as medias: ")))
	
	
		
		
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:29:59) 
-- CODE:
from numpy import *
vet = array(eval(input("Digite as medias: ")))
i = 0
ix = 0
while (size(vet) > 1):
	for i in range(size(vet)):
		if (5 <= i < 7):
			ix = ix + 1
			i = i + 1
		else:
			ix = 0
print(ix)
vet = array(eval(input("Digite as medias: ")))
	
	
		
		
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:31:54) 
-- CODE:
from numpy import *
vet = array(eval(input("Digite as medias: ")))
i = 0
ix = 0
while (size(vet) > 1):
	for i in range(size(vet)):
		if (5 <= vet[i] < 7):
			ix = ix + 1
			i = i + 1
		else:
			ix = 0
print(ix)
vet = array(eval(input("Digite as medias: ")))
	
	
		
		
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:32:51) 
-- CODE:
from numpy import *
vet = array(eval(input("Digite as medias: ")))
ix = 0
while (size(vet) > 1):
	for i in range(size(vet)):
		if (5 <= vet[i] < 7):
			ix = ix + 1
print(ix)
vet = array(eval(input("Digite as medias: ")))
	
	
		
		
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:33:20) 
-- CODE:
from numpy import *
vet = array(eval(input("Digite as medias: ")))
ix = 0
while (size(vet) > 1):
	for i in range(size(vet)):
		if (5 <= vet[i] < 7):
			ix = ix + 1
print(ix)
vet = array(eval(input("Digite as medias: ")))
	
	
		
		
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:34:05) 
-- CODE:
from numpy import *
vet = array(eval(input("Digite as medias: ")))
ix = 0
while (size(vet) > 1):
	for i in range(size(vet)):
		if (5 <= vet[i] < 7):
			ix = ix + 1
	vet = array(eval(input("Digite as medias: ")))
print(ix)

	
	
		
		
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:35:30) 
-- CODE:
from numpy import *
vet = array(eval(input("Digite as medias: ")))
while (size(vet) > 1):
	ix = 0
	for i in range(size(vet)):
		if (5 <= vet[i] < 7):
			ix = ix + 1
   print(ix)
	vet = array(eval(input("Digite as medias: ")))


	
	
		
		
		
	

-- ERROR:
File "XXXX", line 8
    print(ix)
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:35:52) 
-- CODE:
from numpy import *
vet = array(eval(input("Digite as medias: ")))
while (size(vet) > 1):
	ix = 0
	for i in range(size(vet)):
		if (5 <= vet[i] < 7):
			ix = ix + 1
   print(ix)
	vet = array(eval(input("Digite as medias: ")))


	
	
		
		
		
	

-- ERROR:
File "XXXX", line 8
    print(ix)
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:36:53) 
-- CODE:
from numpy import *
vet = array(eval(input("Digite as medias: ")))
while (size(vet) > 1):
	ix = 0
	for i in range(size(vet)):
		if (5 <= vet[i] < 7):
			ix = ix + 1
	print(ix)
	vet = array(eval(input("Digite as medias: ")))


	
	
		
		
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 20:37:24) 
-- CODE:
from numpy import *
vet = array(eval(input("Digite as medias: ")))
while (size(vet) > 1):
	ix = 0
	for i in range(size(vet)):
		if (5 <= vet[i] < 7):
			ix = ix + 1
	print(ix)
	vet = array(eval(input("Digite as medias: ")))


	
	
		
		
		
	

-- EXECUTION TIME:
1.08225
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
